# ShtrihKod

./: 2.cpp  2.h  CMakeLists.txt  Message.cpp  Message.h  README.md  Sum.cpp  Sum.h  Tests.cpp  Tests.h  main.cpp
OpenCV_ZBar_prob/: CMakeLists.txt  OpenCV_ZBar_prob.cpp  OpenCV_ZBar_prob.sln  OpenCV_ZBar_prob.vcxproj  OpenCV_ZBar_prob.vcxproj.filters  test.cpp
OpenCV_ZBar_prob/OpenCV_ZBar_prob/x64/Debug/: vc143.idb
OpenCV_ZBar_prob/OpenCV_ZBar_prob/x64/Debug/OpenCV_ZBar_prob.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenCV_ZBar_prob.lastbuildstate
ZXing_OpenCV_Prob/: CMakeLists.txt  frame.cpp  scan.cpp  test.cpp  vcpkg.json
generation/: CMakeLists.txt  generate.cpp  generation.cpp  main.cpp
